added table in product page

--- a/products.html
+++ b/products.html
@@ -12,6 +12,7 @@
 </script>
 <title>Products | Arihant Reclamation Pvt. Ltd. | Manufacturers, Exporters of Rubber Chemicals Accelerator MBT, MBTS, CBS, TMT, Zinc Oxide in India</title>
 <meta charset="utf-8">
+<link rel="stylesheet" href="styles.css">
 <style>
 a.saa {
 background: rgba(255,255,255,0.5);
@@ -178,7 +179,7 @@ sup  { font-size: 36px; font-weight: 100; line-height: 55px; }
 	</tr>
 </table>
 
-<table width="100%" cellpadding="40" cellspacing="0" bgcolor="#FFFFFF">
+<!-- <table width="100%" cellpadding="40" cellspacing="0" bgcolor="#FFFFFF">
   <tr>
     <td align="right" width=30% style="vertical-align: top; ">
       <h1><font face="century gothic"><font color=#585858>MBTS<br>Rubber Accelerator<br><br><img src="mbts.png" style="border-radius: 25px; " width="300px"></font></font></h1>
@@ -266,24 +267,115 @@ In case of low unsaturation content rubbers (e.g. IIR / EPDM) cured with thiuram
     </td>
   </tr>
 </table>
-
-<table align="center" width=100% bgcolor="#424242">
+-->
+</table> 
+<table border="1" cellpadding="5" cellspacing="0" width="100%">
+  <tr id="headings">
+      <td>Product
+          <br>
+           Name
+      </td>
+      <td>
+        Product
+        <br>
+        Photo
+      </td>
+      <td>Functions</td>
+      <td>Appearance</td>
+      <td>Melting 
+          <br>
+          Point
+      </td>
+      <td>Dosage
+          <br>
+          (Phr)
+      </td>
+      <td>Advantages</td>
+      <td>Technical
+          <br>
+           Product 
+          <br> 
+          Data
+          <br>
+           Sheets
+      </td>
+  </tr>
   <tr>
-    <td align=center>
-    <br><br>
-      <font color=#FAFAFA size=5px face="century gothic">
-        <b>Reach Us Now!</b>
-        <br><br><br>      
-      </font>
-      <font color=#FAFAFA size=5px face="century gothic">
-        <b>+91-9811041433, +91-8860732624 </b><br><font color=#FAFAFA size=4px face="century gothic"><b>Mailing address: </b>arihantreclamationpvtltd@gmail.com<br>arihantreclamationprivateltd@rediffmail.com</font>
-        <br><br>      
-      </font>
-      <font color=#FAFAFA size=4.5px face="century gothic">
-        &copy; &reg; <b>Arihant Reclamation Pvt. Ltd.</b> 2018. All Rights Reserved.<br>
-        </u>  </a>  
-      </font>
-    </td>
+      <td>
+        <font face="century gothic" color="#585858" size="4px">
+            MBTS
+            <br>
+            Rubber Accelerator
+        </font>
+      </td>
+      <td><img src="./mbts.png" alt="" height="300px"></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td class="adv"></td>
+      <td><a href=""><img src="./pdf-icon.jpg " alt="Textbook" height="65px"/></a></td>
+  </tr>
+  <tr>
+      <td>
+          <font face="century gothic" color="#585858" size="4px">
+              CBS
+              <br>
+              Rubber Accelerator
+          </font>
+      </td>
+      <td><img src="./cbs.png" alt="" height="300px"></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td class="adv"></td>
+      <td><a href=""><img src="./pdf-icon.jpg" alt="Textbook" height="65px"/></a></td>
+  </tr>
+  <tr>
+      <td>
+          <font face="century gothic" color="#585858" size="4px">
+              MBT
+              <br>
+              Rubber Accelerator
+          </font>
+      </td>
+      <td><img src="./mbt.jpg" alt="" height="300px"></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td class="adv"></td>
+      <td><a href=""><img src="./pdf-icon.jpg" alt="Textbook" height="65px"/></a></td>
+  </tr>
+  <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td class="adv"></td>
+      <td><a href=""><img src="./pdf-icon.jpg" alt="Textbook" height="65px"/></a></td>
   </tr>
 </table>
-</table></body></html>
+<table align="center" width=100% bgcolor="#424242">
+    <tr>
+      <td align=center>
+      <br><br>
+        <font color=#FAFAFA size=5px face="century gothic">
+          <b>Reach Us Now!</b>
+          <br><br><br>      
+        </font>
+        <font color=#FAFAFA size=5px face="century gothic">
+          <b>+91-9811041433, +91-8860732624 </b><br><font color=#FAFAFA size=4px face="century gothic"><b>Mailing address: </b>arihantreclamationpvtltd@gmail.com<br>arihantreclamationprivateltd@rediffmail.com</font>
+          <br><br>      
+        </font>
+        <font color=#FAFAFA size=4.5px face="century gothic">
+          &copy; &reg; <b>Arihant Reclamation Pvt. Ltd.</b> 2018. All Rights Reserved.<br>
+          </u>  </a>  
+        </font>
+      </td>
+    </tr>
+  </table>
+</body></html>
