--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   gtag('config', 'UA-123321659-1');
 </script>
 
-<title>Arihant Reclamation Pvt. Ltd. | Manufacturers of Rubber Chemicals Accelerator MBT, MBTS, CBS, TMT in India</title>
+<title>Arihant Reclamation Pvt. Ltd. | Manufacturers of Rubber Chemicals Accelerator MBT, MBTS, CBS, ZDEC, TBBS, ZMBT, Active Zinc Oxide, PU Binder and TMT in India</title>
 <meta charset="utf-8">
 <style>
 a.saa {
@@ -179,7 +179,7 @@ sup  { font-size: 36px; font-weight: 100; line-height: 55px; }
 </td></tr></table>
 <table width=80% align="center" cellpadding=70 bgcolor=#F2F2F2>
 <tr>
-<td><p align="justified"><font color=#1C1C1C face="century gothic" size=4px><a id=down><b>Arihant Reclamation Pvt. Ltd. </b>are the manufacturers of high quality <b>MBT, MBTS, CBS and TMT</b> based in New Delhi and Sonepat, Haryana in India. With more than 28 years of experience, <b>Mr. Rajesh Mittal</b> at- <b>+91-9811041433</b>, <b>Mr. Anubhav Mittal</b> at<b>+91-8860732624</b>. We will be delighted to serve you.</font></p></td></tr>
+<td><p align="justified"><font color=#1C1C1C face="century gothic" size=4px><a id=down><b>Arihant Reclamation Pvt. Ltd. </b>are the manufacturers of high quality <b>MBT, MBTS, CBS, ZDEC, TBBS, ZMBT, Active Zinc Oxide, PU Binder and TMT</b> based in New Delhi and Sonepat, Haryana in India. With more than 28 years of experience, <b>Mr. Rajesh Mittal</b> at- <b>+91-9811041433</b>, <b>Mr. Anubhav Mittal</b> at<b>+91-8860732624</b>. We will be delighted to serve you.</font></p></td></tr>
 </table>
 <table width=100% align=center background=download.jpg height=44% cellpadding="30px">
 <tr>
