changes in products table

--- a/products.html
+++ b/products.html
@@ -178,121 +178,32 @@ sup  { font-size: 36px; font-weight: 100; line-height: 55px; }
 		</td>
 	</tr>
 </table>
-
-<!-- <table width="100%" cellpadding="40" cellspacing="0" bgcolor="#FFFFFF">
-  <tr>
-    <td align="right" width=30% style="vertical-align: top; ">
-      <h1><font face="century gothic"><font color=#585858>MBTS<br>Rubber Accelerator<br><br><img src="mbts.png" style="border-radius: 25px; " width="300px"></font></font></h1>
-    </td>
-    <td align=left width=70%>
-      <font size="3px" face="century gothic">MBTS is a semi-ultra fast accelerator for Styrene Butadiene Rubber(SBR), Nitrile Butadiene Rubber(NBR) and other highly unsaturated rubbers. It readily disperses in rubber compounds and acts as a retarder for CR based compounds (depending on type of CR used).  MBTS is a retarder of cure in rubber compounds accelerated using thiurams (TMTM/TMTD) class accelerators as main accelerator and reduces bloom of thiurams to a great extent.<br><br>
-
- MBTS has a long curing range and is safer than  MBT at rubber compound processing temperatures.  MBTS is very active above curing temperature of 140°C giving flat curing characteristics to 'polyi-soprene' rubbers (e.g. NR).  MBTS accelerated compounds exhibit very good tensile and resilience properties when used in combination with other booster accelerators.<br><br>
-
-Normal  dosages of Zinc oxide and Stearic acid are necessary for  MBTS accelerated cure systems.  MBTS based cure systems can be activated by using small proportions of DOTG, DPG, TMTM, TMTD, ZDC, etc. to improve the rate and the state of cure with a compromise on scorch, reversion and ageing resis-tance particularly when dithiocarbamate boosted accelerator systems are used.<br><br>
-
-If required,  MBTS based cure systems can be retarded using PVI or other acid retarders. The response of Pilgard PVI to thiazole class accelerators is somewhat sluggish as compared to its effectiveness with sulphenamide class accelerators.  MBTS can safely be used to produce non-discoloring and non-staining rubber products and is particularly recommended for rubber to metal bonded products.<br><br>
-
- MBTS shows more retarding effect as compared to  MBT in IIR based compounds (e.g. butyl tubes/extrusions, etc.) and serves as an oxidizing agent for GMF/dibenzo GMF to form nitroso groups for rapid cross linking of diene rubbers.  MBTS is also used in the compounds based on halogenated butyl rubbers.<br>
-<br>
- MBTS dosages are kept below 3.0 phr level to avoid bloom of thiurams/ dithiocarbamates in EPDM based rubber compounds.
-
-
-      <br><br>
-    </td>
-  </tr>
-</table>
-
-
-
-
-
-
-<table width="100%" cellpadding="40" cellspacing="0" bgcolor="#FFFFFF">
-  <tr>
-    <td align="right" width=30% style="vertical-align: top; ">
-      <h1><font face="century gothic"><font color=#585858>CBS<br>Rubber Accelerator<br><br><img src="cbs.png" style="border-radius: 25px; " width="300px"></font></font></h1>
-    </td>
-    <td align=left width=70%>
-      <font size="3px" face="century gothic"> CBS is a delayed action sulphenamide accelerator for NR, SBR, BR, NBR and other sulphur / sulphur donor cured diene rubbers.  CBS is supplied in dust free pellet form which  offers advantages such as easy handling, accurate weighing on all types of weighing systems.  CBS pellets disperse easily in rubber compounds.  CBS is also available in oil treated powder form.<br><br>
-
-Normal dosages of Zinc oxide and Stearic acid are necessary for all sulfenamide accelerators. However, excess dosage of Stearic acid does not offer additional advantage as in case of thiazoles. The normal dosage of  CBS is in the range of 0.5-1.0 phr for conventional cure systems, 1.5-2.0 phr for Semi-EV cures and 3.0-5.0 phr for low sulphur EV cures.  CBS is used at 1.0 phr dosage as an effective retarder for sulphur-less cures based on thiuram accelerators.<br><br>
-
- CBS is very active above curing temperature of approx. 140°C and hence offers very good scorch safety during rubber compound processing operations (e.g. extrusion, calendaring, etc.) and improves the storage life of processed rubber stocks as compared to thiazole accelerators.  CBS/other sulphenamides are preferred when higher loadings of tread grade furnace blacks, (which are basic in nature and generate substantial heat during processing of NR/BR/SBR based stocks) are used. However; prolonged / repeated rubber stock processing above 120°C should be avoided, particularly in the absence of appropriate dosage of PVI), to minimize the risk of 'scorch'.<br><br>
-
- CBS / other sulphenamide accelerators are usually incorporated in the rubber compound at the end of mixing cycle when the temperature is above the melting point of the accelerator to ensure proper dispersion. However, generation of excessive heat is avoided to prevent decomposition of sulfenamide accelerators. In case, the sulphenamide accelerators are to be added at a later stage; addition in the form of sulphenamide-rubber master batch (prepared above the melting point of sulphenamide accelerator) is recommended.
 <br><br>
-When used alone;  CBS exhibits faster cure rate (above 140°C), higher state of cure and moderate plateau effect as compared to thiazole accelerators. Vulcanizates based on  CBS / other sulphenamide accelerators have a typical 'amine' odor and exhibit higher stress-strain properties along with better resilience and Flex-Fatigue resistance as compared to thiazoles.<br><br>
-
- CBS / other sulphenamide accelerators can be further activated by using small proportions of thiurams or dithiocarbamate accelerators with a compromise on  processing safety, reversion resistance and ageing resistance. Use of DPG / DOTG is generally avoided as booster accelerators due to their tendency of imparting higher heat build-up properties to the rubber vulcanizates as compared to thiuram boosted cure systems.<br><br>
-
- PVI is a very effective pre vulcanization (scorch) inhibitor for sulphenamide and activated sulphenamide cure systems without any compromise on the rate of cure. The improvement in scorch safety is directly proportional to the dosage of  PVI and hence the minimum dosage required for obtaining desired scorch safety can easily be determined. Use of excess dosage of  PVI is avoided as the same may cause undesired delay for the on-set of cure besides affecting the state of cure to some extent.<br><br>
-
- CBS / other sulphenamide accelerators decompose rapidly in the presence of hot steam and hence preferred for the manufacture of open steam cured rubber products requiring faster on-set of cure for better shape retention. However; due to delayed on-set of cure in the absence of moisture, sulphenamide accelerators are not preferred for hot air cured products.<br><br>
-
- CBS itself is non-staining. However, when higher dosages are used, slight yellowing effect may be observed on white / light colored rubber products on exposure to sunlight.
-
-
-
-
-      <br><br>
-    </td>
-  </tr>
-</table>
-
-<table width="100%" cellpadding="40" cellspacing="0" bgcolor="#FFFFFF">
-  <tr>
-    
-    <td align=right width=70%>
-      <font size="3px" face="century gothic"> MBT is a semi ultra fast accelerator for NR, SBR, BR, NBR and other highly unsaturated diene rubbers. It readily disperses in rubber compounds and also acts as a mild peptizer for NR & CR.  MBT is a retarder of cure in rubber compounds accelerated using thiurams (TMTD/TMTM) / dithiocarbamates (ZDC, ZDBC) or ETU class accelerators as main accelerators. Even relatively small dosages of  MBT show significant effect and reduce bloom of thiurams and dithiocarbamates.  MBT also acts as a retarder in CR based compounding formulations.<br><br>
-
- MBT has a long curing range and is very active above 115°C.  MBT gives flat curing characteristics for 'polyisoprene' rubber (e.g. NR) based compounds exhibiting ability to withstand long over cures. However, MBT accelerator is scorchy in nature and the rate and the state of cure achieved is comparatively lower than sulphenamide accelerators like CBS & TBBS. Thus, when used alone,  MBT exhibits comparatively lower tensile properties and resilience. However, in combination with other accelerators marked improvements are observed.<br><br>
-
-Normal dosages of Zinc oxide and Stearic acid are necessary as cure activators for  MBT based sulphur cure systems.  MBT when used alone shows poor response to low sulphur cure systems. However; in combination with other basic accelerators like TMTM, TMTD very low, medium or high sulphur cure systems can be designed.<br><br>
-
- MBT based cure systems can be activated by using small proportions of basic accelerators like DOTG, DPG, TMTM, TMTD, ZDC etc. to improve the rate and the state of cure with a compromise on scorch, reversion and ageing resistance particularly when dithiocarbamate type accelerators are used as booster accelerators.<br><br>
-
- MBT based cure systems can be retarded by using small proportions of PVI, or other retarder like pthalic anhydride, salicylic acid, etc. Addition of extra Stearic acid or partial replacement of MBT accelerator by sulphenamide accelerator can also control scorch to some extent.<br><br>
-
-In case of low unsaturation content rubbers (e.g. IIR / EPDM) cured with thiurams and dithiocarbamate accelerators ;  MBT acts as a retarder. In EPDM based rubber compounds the dosage of  MBT is kept below 2.5 - 3.0 phr to avoid bloom of dithiocarbamate / thiurams type accelerators.  MBT is generally avoided in carbon black filled halogenated butyl rubber based stocks due to its scorching tendency; however, the same can be used in light colored Chlorobutyl based compounds for faster cure.
-<br><br>
- MBT itself does not discolor white /colored vulcanizates, however; slight yellowing effect is observed when white colored products are exposed to sunlight. The effect of  MBT on colored products is very minimal.  MBT and other thiazole class accelerators are particularly preferred for rubber to metal bond-ing applications due to the absence of any free amines.
-
-
-
-      <br><br>
-    </td>
-    <td align="left" width=30% style="vertical-align: top; ">
-      <h1><font face="century gothic"><font color=#585858>MBT<br>Rubber Accelerator<br><br><img src="mbt.png" style="border-radius: 25px; " width="300px"></font></font></h1>
-    </td>
-  </tr>
-</table>
--->
 </table> 
-<table border="1" cellpadding="5" cellspacing="0" width="100%">
+<table border="1" cellpadding="20" cellspacing="0" width="100%" id="products">
   <tr id="headings">
-      <td>Product
+      <td>PRODUCT
           <br>
-           Name
+           NAME
       </td>
       <td>
-        Product
+        PRODUCT
         <br>
-        Photo
+        PHOTO
       </td>
-      <td>Functions</td>
-      <td>Appearance</td>
-      <td>Melting 
+      <td>FUNCTIONS</td>
+      <td>APPEARANCE</td>
+      <td>MELTING 
           <br>
-          Point
+          POINT
       </td>
-      <td>Technical
+      <td>TECHNICAL
           <br>
-           Product 
+           PRODUCT 
           <br> 
-          Data
+          DATA
           <br>
-           Sheets
+           SHEETS
       </td>
   </tr>
   <tr>
