--- a/ourteam.html
+++ b/ourteam.html
@@ -182,9 +182,8 @@ sup  { font-size: 36px; font-weight: 100; line-height: 55px; }
       <h1><font face="century gothic"><font color=#585858>ABOUT THE<br>TEAM</font></font></h1>
     </td>
     <td align=left width=70%>
-      <font size="3px" face="century gothic"><b>Mr. Rajesh Mittal</b><br><br>The Director of  the company, Mr. Rajesh Mittal, who has a working experience in the field of rubbers and chemicals of more than 28 years. He has a graduate degree in Commerce (1989).<br><br>
-He is one of finest and most knowledgeable people in rubbers and chemicals industry with a great business acumen.<br><br>
-      <b>Mr. Anubhav Mittal</b><br><br>A software engineer from Delhi Technological University (2022), has become an integral part of the company at an early age. He is the Head of Marketing and Operations for the company.<br><br>He also looks after the technological department of the company. 
+      <font size="3px" face="century gothic"><b>Mr. Rajesh Mittal</b><br><br>The Director of  the company, Mr. Rajesh Mittal, who has a working experience in the field of rubbers and chemicals of more than 29 years. He has a graduate degree in Commerce (1989).<br><br>
+He is one of finest and most knowledgeable people in rubbers and chemicals industry with a great business acumen. 
       <br><br>
     </td>
   </tr>
