--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@ sup  { font-size: 36px; font-weight: 100; line-height: 55px; }
 <tr>
 <td align=left><a href="index.html"><img src=logo.png height="160" width="400"></a>
 <td align=right><img src="line.jpg" height=130>
-<td align=left><font color="#2E2E2E" face="Century gothic" size=4>MBT Accelerator <br> MBTS Accelerator <br> CBS Accelerator<br>TMT Accelerator<br>
+<td align=left><font color="#2E2E2E" face="Century gothic" size=4>MBT Accelerator <br> MBTS Accelerator <br> CBS Accelerator<br><a href="./products.html" style="text-decoration: none; color: #2E2E2E; font-weight: bold;">View All Products >> </a><br>
 </font></td></td></td></tr></table>
 <table align=center height=300px width="100%" cellspacing=30 cellpadding="30" background=cubg.jpg>
 	<tr>
