:boom: Altered products page style

--- a/products.html
+++ b/products.html
@@ -281,7 +281,7 @@ sup  { font-size: 36px; font-weight: 100; line-height: 55px; }
                         Rubber Accelerator
                     </font>
                 </td>
-                <td><img src="./zmbt.jpg" alt="" height="300px"></td>
+                <td><img src="./ZMBT.jpg" alt="" height="300px"></td>
                 <td> ZMBT is a semi-ultra fast accelerator for NR, SBR, NBR, BR and other diene rubbers.
           <br><br>
           The critical cure temperature of  ZMBT is approx. 120°C and dry rubber / latex based compounds are vulcanized quickly at 125°C.The state of cure developed by  ZMBT is slightly lower than  MBT; however, scorch safety is much higher and hence can be used in place of MBT for scorch control. 
@@ -299,7 +299,7 @@ sup  { font-size: 36px; font-weight: 100; line-height: 55px; }
                         Rubber Accelerator
                     </font>
                 </td>
-                <td><img src="./zdc.jpg" alt="" height="300px"></td>
+                <td><img src="./ZDC.jpg" alt="" height="300px"></td>
                 <td> ZDC is a widely used ultra fast accelerator for NR latex based compounds and also finds applications as primary or secondary accelerator in most dry rubber based sulphur cured compounds.
           <br><br>
            ZDC is  very active at temperatures above 100°C. As a  primary accelerator in NR dry rubber based compounds.  ZDC exhibits scorching tendency, faster cure rate, higher cross link density but poor reversion resistance. However;  ZDC does not affect the stability of NR latex based compounds.</td>
@@ -315,7 +315,7 @@ sup  { font-size: 36px; font-weight: 100; line-height: 55px; }
                         Rubber Accelerator
                     </font>
                 </td>
-                <td><img src="./TBBS.jpg" alt="" height="300px"></td>
+                <td><img src="./tbbs.jpg" alt="" height="300px"></td>
                 <td> TBBS is a delayed action sulphenamide accelerator for NR, SBR, BR, NBR and other sulphur / sulphur donor cured diene rubbers.  TBBS exhibits very good storage stability as compared to other sulphenamide accelerators and  TBBS pellets disperse easily in rubber compounds. 
           <br><br>
           The normal dosage of  TBBS is in the range of 0.5-1.0 phr for 'conventional cure systems; 1.5-2.0 phr for 'Semi-EV' cure systems and 3.0-4.0 phr for 'Low sulphur EV cure systems'. Normal dosages of zinc oxide and Stearic acid are necessary for cure activation. </td>
