--- a/customer.html
+++ b/customer.html
@@ -23,7 +23,166 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
   <style media="screen">
-    .text{
+    a.saa {
+      background: rgba(255, 255, 255, 0.5);
+    }
+
+    td.munarchivec {
+      background-color: #00BFFF;
+    }
+
+    td.munarchivenc:hover {
+      background-color: #00BFFF;
+    }
+
+    a.headerc {
+      text-decoration: none;
+      color: white;
+      font-family: "Century gothic";
+      font-size: 14px;
+    }
+
+    a.headernc {
+      text-decoration: none;
+      color: white;
+      font-family: "Century gothic";
+      font-size: 14px;
+    }
+
+    .divBox {
+      width: 100%;
+      height: 50px;
+    }
+
+    .divBox a {
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
+
+    @font-face {
+      font-family: "Open Sans Extrabold";
+      src: url(OpenSans-ExtraBold.ttf);
+    }
+
+    div {
+      font-family: "Open Sans Extrabold";
+    }
+
+    .button {
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      text-align: center;
+      color: #0C5;
+
+      font-size: 12px;
+      font-family: "Nunito", sans-serif;
+      font-weight: 300;
+
+      margin: 5em auto;
+
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+
+      padding: 15px 0;
+      width: 220px;
+      height: 30px;
+
+      background: #2E9AFE;
+      border: 1px solid #2E9AFE;
+      color: #F2F2F2;
+      overflow: hidden;
+
+      transition: all 0.5s;
+    }
+
+    .button:hover,
+    .button:active {
+      text-decoration: none;
+      color: #2E9AFE;
+      border-color: #2E9AFE;
+      background: #F2F2F2;
+    }
+
+    .button span {
+      display: inline-block;
+      position: relative;
+      padding-right: 0;
+
+      transition: padding-right 0.5s;
+    }
+
+    .button span:after {
+      content: ' ';
+      position: absolute;
+      top: 0;
+      right: -18px;
+      opacity: 0;
+      width: 10px;
+      height: 10px;
+      margin-top: -10px;
+
+      background: rgba(0, 0, 0, 0);
+      border: 3px solid #FFF;
+      border-top: none;
+      border-right: none;
+
+      transition: opacity 0.5s, top 0.5s, right 0.5s;
+      transform: rotate(-45deg);
+    }
+
+    .button:hover span,
+    .button:active span {
+      padding-right: 30px;
+    }
+
+    .button:hover span:after,
+    .button:active span:after {
+      transition: opacity 0.5s, top 0.5s, right 0.5s;
+      opacity: 1;
+      border-color: #0C5;
+      right: 0;
+      top: 50%;
+    }
+
+    @import url(http://fonts.googleapis.com/css?family=Nunito:300);
+
+    body {
+      font-family: "Nunito", sans-serif;
+      font-size: 24px;
+    }
+
+    a {
+      text-decoration: none;
+    }
+
+    p {
+      text-align: center;
+    }
+
+    sup {
+      font-size: 36px;
+      font-weight: 100;
+      line-height: 55px;
+    }
+
+
+    .row .col img {
+      width: 100px;
+      height: 100px;
+    }
+
+    .row .col {
+      padding: 10px;
+    }
+
+    .accContainer {
+      padding: 10px 0;
+    }
+
+    .text {
       display: flex;
       align-items: center;
       justify-content: center;
@@ -34,8 +193,73 @@
 </head>
 
 <body>
+  <table width=100% style="position:fixed; z-index: 100; line-height: 1.2">
+    <table cellpadding=0 cellspacing=0 bgcolor=#424242 width=100% height=50px align=center style="position:fixed; z-index:100; line-height: 1.2">
+      <tr>
+        <td>
+          <table align=center width=60% height=100% cellpadding=0 cellspacing=0 style="line-height: 1.2">
+            <tr>
+              <td align=center class=munarchivenc width=16%>
+                <div class=divBox><a class=headernc href="index.html"><br>HOME</a></div>
+              <td align=center class=munarchivenc width=16%>
+                <div class=divBox><a class=headernc href="aboutus.html"><br>ABOUT US</a></div>
+              <td align=center class=munarchivenc width=16%>
+                <div class=divBox><a class=headernc href="ourteam.html"><br>OUR TEAM</a></div>
+
+              <td align=center class=munarchivenc width=16%>
+                <div class=divBox><a class=headernc href="products.html"><br>OUR PRODUCTS</a></div>
+              <td align=center class=munarchivenc width=16%>
+                <div class=divBox><a class=headernc href="exhibition.html"><br>EXHIBITIONS</a></div>
+              <td align=center class=munarchivenc width=16%>
+                <div class=divBox><a class=headernc href="contact.html"><br>CONTACT US</a></div>
+              </td>
+        </td>
+        </td>
+        </td>
+        </td>
+        </td>
+      </tr>
+    </table>
+    </td>
+    </tr>
+  </table>
+  <table width=70% align=center cellpadding="60">
+    <tr>
+      <td align=left><a href="index.html"><img src=logo.png height="160" width="400"></a>
+      <td align=right><img src="line.jpg" height=130>
+      <td class="accContainer">
+        <div class="row" style="margin-top: 25%">
+          <div class="col">
+            <img src="acc1.jpg" alt="">
+          </div>
+          <div class="col">
+            <img src="acc2.png" alt="">
+          </div>
+        </div>
+      </td>
+      <td class="accContainer">
+        <div class="row" style="margin-top: 25%">
+          <div class="col">
+            <img src="acc3.jpg" alt="">
+          </div>
+          <div class="col">
+            <img src="acc4.png" alt="">
+          </div>
+        </div>
+      </td>
+      </td>
+      </td>
+    </tr>
+  </table>
+  <table width=100% align=center>
+    <tr>
+      <a href="products.html" style="font-size: 1.2rem; font-family: " Century gothic";">
+        <marquee>Rubber Accelerators MBT, MBTS, CBS, TMTD, TDQ, Polyurethane (PU) Binder, Chemlok, SBR 1502, PBR, Reclaim Rubber</marquee>
+      </a>
+    </tr>
+  </table>
   <div class="container">
-    <div class="card m-5">
+    <div class="card" style="margin: 0.5rem 3rem 3rem 3rem">
       <div class="row no-gutters">
         <div class="col-md-6">
           <img src="indian.jpg" class="card-img" alt="...">
@@ -60,6 +284,27 @@
       </div>
     </div>
   </div>
+  <table align="center" width=100% bgcolor="#424242">
+    <tr>
+      <td align=center>
+        <br><br>
+        <font color=#FAFAFA size=5px face="century gothic">
+          <b>Reach Us Now!</b>
+          <br><br><br>
+        </font>
+        <font color=#FAFAFA size=5px face="century gothic">
+          <b>+91-9811041433, +91-8860732624 </b><br>
+          <font color=#FAFAFA size=4px face="century gothic"><b>Mailing address: </b>arihantreclamationpvtltd@gmail.com<br>arihantreclamationprivateltd@rediffmail.com</font>
+          <br><br>
+        </font>
+        <font color=#FAFAFA size=4.5px face="century gothic">
+          &copy; &reg; <b>Arihant Reclamation Pvt. Ltd.</b> 2018. All Rights Reserved.<br>
+          </u> </a>
+        </font>
+      </td>
+    </tr>
+  </table>
+
 </body>
 
 </html>
